# nmpc-codegen

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Matlab_test_utils.m  README.md  codestyle.md  generate_test_files.py  toturial_nmpc_codegen.py  toturial_nmpc_codegen_multiple_shot.py  tutorial_nmpc_codegen_multiple_shot.py
C_proximal_functions/globals/: globals.h
C_proximal_functions/include/: indicator_L0ball.h  indicator_bin.h  indicator_box.h  one_norm.h
C_proximal_functions/src/: CMakeLists.txt  indicator_L0ball.c  indicator_bin.c  indicator_box.c  one_norm.c
C_proximal_functions/src/internal_lib/: quicksort.c  quicksort.h  readme.md
Matlab/: README.md  lbfgs.m  lbfgs_run.m
Matlab/lbfgs/: lbfgs.m  lbfgs_rosenbrock_run.m  lbfgs_run.m
Matlab/panoc/: FBE.m  panoc_run.m
Matlab/problems/: g_1.m  g_2.m  prox_g_1.m  prox_g_2.m
Matlab/proximal_grad/: estimate_lipschitz.m  g.m  prox_g.m  prox_grad_descent_run.m  prox_grad_descent_step.m
PANOC/: CMakeLists.txt  buffer.c  buffer.h  casadi_definitions.h  casadi_interface.c  casadi_interface.h  function_evaluator.c  function_evaluator.h  interfaceCasadi.c  interfaceCasadi.h  lbfgs.c  lbfgs.h  lipschitz.c  lipschitz.h  matrix_operations.c  matrix_operations.h  nmpc.c  panoc.c  panoc.h  proximal_gradient_descent.c  proximal_gradient_descent.h
casadi/: CMakeLists.txt  README.md  cost_function.c  cost_function.h  cost_function_derivative_combined.c  cost_function_derivative_combined.h  example1.py  g.c  gen_costum.c  integrator.c  integrator.h  proxg.c
demos/Matlab/: TwoCircTrailer.m  TwoCircTrailer_constraint.m  TwoCircTrailer_constraint_LA.m  TwoCircTrailer_display.m  compare_libs.m  compare_libs_table.asv  compare_libs_table.m  demo1.m  demo2.m  demo3.m  demo4.m  demo_lbfgs_speedup.m  demo_set_obstacles.m  demos.asv  demos.m  prepare_demo_trailer.m  simulate_demo_trailer.m  simulate_demo_trailer_OPTI_ipopt.m  simulate_demo_trailer_casadi_ipopt.m  simulate_demo_trailer_fmincon.m  simulate_demo_trailer_interior_point_matlab.m  simulate_demo_trailer_panoc_matlab.m  test_obs.m
demos/Matlab/quadcopter/: demo_error_panoc.m  demo_error_panoc_LA.m  performance_measurement.m  plotcube.m  simple_controller.m  simulate_OPTI_ipopt.m  simulate_demo_controller.m  simulate_panoc_matlab.m
demos/Matlab/tables/: README.md
demos/python/: OneCircTwoRectTrailer.py  TwoCircTrailer.py  TwoCircTrailer_constraint.py  chain_dyn_casadi_demo.py  demo.py  demo1.py  demo2.py  demo3.py  demo4.py  function_generator_demo.py  globals_generator_demo.py  trailer_simulation_demo.py  trailer_simulations_python.py
demos/python_internal/: chain_dyn_casadi_demo.py
demos/thesis/: .gitignore  OneCircTwoRectTrailer.py  TwoCircTrailer.py  demo.py  demo1.py  demo2.py  demo3.py  demo4.py  demo_obs.py  trailer_simulations.m  trailer_simulations_python.py
docs/: About.md  about.md  example_Matlab.md  example_Python.md  index.md  structure_library.md
docs/_layouts/: default.html
docs/install/: Matlab_install.md  Python_dev_install.md  Python_install.md  Toolchain_install.md
globals/: .gitignore  globals.h  globals_dyn.h
include/: nmpc.h  panoc.h
minimum_build_system/: CMakeLists_casadi.txt  CMakeLists_panoc.txt  CMakeLists_root.txt  main_trailer.c  nmpc.c  special_nmpc.c
old_code/: Matlab_test_utils_test_if_command_available.m  tutorial_nmpc_codegen_multiple_shot.py
old_code/demos/Matlab/: TwoCircTrailer.m  compare_libs.m  compare_libs_limited_graphs.m  compare_libs_table.m  draw_obstacle_border.m  prepare_demo_trailer.m  simulate_demo_trailer.m  simulate_demo_trailer_casadi_ipopt.m  simulate_demo_trailer_panoc_draft.m  simulate_demo_trailer_panoc_matlab.m
old_code/demos/python/: README.md  TwoCircTrailer.py  demo.py  demo2.py  demo3.py  demo4.py
python_interface/: libpython_interface.h  nmpc_python.c  nmpc_python.h  test_timer.c  test_timer_linux.c  timer.h  timer_linux.c  timer_mac.c  timer_windows.c
src_matlab/+nmpccodegen/+Cfunctions/: IndicatorBoxFunction.m
src_matlab/+nmpccodegen/+example_models/: get_trailer_model.m  quadcopter_dyn.m  trailer_dyn.m  trailer_printer.m
src_matlab/+nmpccodegen/+models/: integrate.m
src_matlab/nmpccodegen/Cfunctions/: Cfunction.m  IndicatorBoxFunction.m  IndicatorBoxFunctionProx.m  ProximalFunction.m  Source_file_operations.m
src_matlab/nmpccodegen/controller/: Casadi_code_generator.m  Globals_generator.m  Nmpc_panoc.m  Single_shot_definition.m  Stage_cost_QR.m
src_matlab/nmpccodegen/example_models/: chain_dyn.m
src_matlab/nmpccodegen/models/: Model.m  Model_continuous.m  integrate.m
src_matlab/nmpccodegen/tools/: Bootstrapper.m  Simulation_data.m
src_python/: README.md  bootstrapper.py  example_models.py  globals_generator.py  integrators.py  model.py  model_continious.py  nmpc_panoc.py  obstacle.py  simulator.py  stage_costs.py  test_obstacle.py
src_python/Cfunctions/: Function.py  IndicatorBoxFunction.py  ProximalFunction.py  readme.md  source_file_operations.py
src_python/models/: chain_model.py
src_python/nmpccodegen/: __init__.py
test_controller_builds/: README.md
tst/: CMakeLists.txt
tst/python/: README.md  bootstrapper_demo.py  chainDyn.py  chainDynCasadi.py  chainDynCasadi_test.py  chainDyn_test.py  chain_dyn_controller_example.py  function_generator_test.py  generate_simple_func.py  globals_generator_test.py  integrators.py  nmpc_python_demo.py  optimal_control.py  test_single_shot_chain_dyn.py
tst/python/trailer/: test_trailer.py  trailer_demo_simulation.py  trailer_generate_controller.py  trailer_generate_controller_with_obs.py  trailer_simple_controller.py
tst/src/: README.md  casadi_interface_test.c  example_problems.c  example_problems.h  lbfgs_poly_test.c  lipschitz_estimator_test.c  matrix_operations_2norm.c  matrix_operations_norms.c  matrix_operations_vectors.c  nmpc_panoc_test.c  panoc_interfaceCasadi_simpleTest.c  panoc_poly_test.c  prox_grad_descent_poly_test.c
tst/src/mocks/: README.md  casadi_interface_test.c  casadi_interface_test.h  lbfgs_rosenbrock_interface.h  lbfgs_test_buffer.c  lbfgs_test_proximal_gradient_descent.c
(+167 files in other folders)
